@@ -22,3 +22,4 @@
 - Ability to filter out PA internals/Monitors.
 - Properly dealing with non-existing/lost connections.
 - Fixed m/j/k crash when used on empty page.
+- Fixed possible mix-up of SINK and SINK_INPUT controls.
